force-app/main/default/objects/Campaign_Links__c/Campaign_Links__c.object-meta.xml
<CustomObject>
    <label>Campaign Link</label>
    <nameField>
        <displayFormat>CAMP-LINK-{00000000}</displayFormat>
        <label>Campaign Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>