force-app/main/default/objects/Campaign_Links__c/fields/Ad_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Ad_Sizes__c</fullName>
    <label>Ad Sizes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120x240</fullName>
            </value>
            <value>
                <fullName>120x600</fullName>
            </value>
            <value>
                <fullName>125x125</fullName>
            </value>
            <value>
                <fullName>160x600</fullName>
            </value>
            <value>
                <fullName>180x150</fullName>
            </value>
            <value>
                <fullName>200x200</fullName>
            </value>
            <value>
                <fullName>234x60</fullName>
            </value>
            <value>
                <fullName>250x250</fullName>
            </value>
            <value>
                <fullName>300x250</fullName>
            </value>
            <value>
                <fullName>300x600</fullName>
            </value>
            <value>
                <fullName>300x1050</fullName>
            </value>
            <value>
                <fullName>320x50</fullName>
            </value>
            <value>
                <fullName>320x100</fullName>
            </value>
            <value>
                <fullName>336x280</fullName>
            </value>
            <value>
                <fullName>468x60</fullName>
            </value>
            <value>
                <fullName>728x90</fullName>
            </value>
            <value>
                <fullName>970x90</fullName>
            </value>
            <value>
                <fullName>970x250</fullName>
            </value>
            <value>
                <fullName>1200x444</fullName>
            </value>
            <value>
                <fullName>1200x628</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>