force-app/main/default/objects/Campaign_Links__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>