force-app/main/default/objects/Campaign_Links__c/fields/Email_Link_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Link_Name__c</fullName>
    <label>Email Link Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>