force-app/main/default/objects/Campaign_Links__c/fields/Email_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Section_Name__c</fullName>
    <label>Email Section Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>