force-app/main/default/objects/Campaign_Links__c/fields/Headline_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>Headline_Text_Name__c</fullName>
    <label>Headline Text Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>