force-app/main/default/objects/Campaign_Links__c/fields/Landing_Page_Override__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Override__c</fullName>
    <label>Landing Page Override</label>
    <type>Url</type>
</CustomField>