force-app/main/default/objects/Campaign_Links__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>