force-app/main/default/objects/Campaign_Links__c/fields/UTM_Hash__c.field-meta.xml
<CustomField>
    <fullName>UTM_Hash__c</fullName>
    <label>UTM_Hash</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>