force-app/main/default/objects/Campaign_Links__c/recordTypes/Ad_Links.recordType-meta.xml
<RecordType>
    <fullName>Ad_Links</fullName>
    <active>true</active>
    <description>Links used to ads on ad platforms</description>
    <label>Ad Links</label>
</RecordType>