force-app/main/default/objects/Campaign_Links__c/recordTypes/Content_Links.recordType-meta.xml
<RecordType>
    <fullName>Content_Links</fullName>
    <active>true</active>
    <description>Links used in content pieces</description>
    <label>Content Links</label>
</RecordType>