force-app/main/default/objects/Campaign_Links__c/recordTypes/Email_Links.recordType-meta.xml
<RecordType>
    <fullName>Email_Links</fullName>
    <active>true</active>
    <description>Links used in emails</description>
    <label>Email Links</label>
</RecordType>