force-app/main/default/objects/Campaign_Links__c/recordTypes/Social_Post_Links.recordType-meta.xml
<RecordType>
    <fullName>Social_Post_Links</fullName>
    <active>true</active>
    <description>Links used in Social Posts</description>
    <label>Social Post Links</label>
</RecordType>